# sortable-float

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
examples/: basic_usage.py  generate_table.py  sorting_example.py
src/sortable_float/: __init__.py  sortable_float.py
tests/: test_sortable_float.py
