[project]
name = "sortable-float"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Arthur Nishikawa", email = "nishikawa.poli@gmail.com" }]
requires-python = ">=3.9"

[project.optional-dependencies]
tests = ["pytest>=8.4.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
